# facemesh

./: .gitignore  CMakeLists.txt  README.md  main.cpp  merge.cpp
example/: example_delete_vertex_by_index.cpp  example_ray_triangle_intersection.cpp  example_subdivide.cpp
include/: octree.h  ray_triangle.h  trimesh.h  util.h  utils_0925.h
src/: .gitignore  0925_test_ignore.cpp  demo3.py  local_file_2.cpp  trimesh.cpp  util.cpp
